Added shader resource

--- a/gameengine.vcxproj
+++ b/gameengine.vcxproj
@@ -144,6 +144,9 @@
     <ClInclude Include="EngineCanvas.h" />
     <ClInclude Include="Main.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="resources\shaders\simple.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
