--- a/gameengine.vcxproj.filters
+++ b/gameengine.vcxproj.filters
@@ -28,17 +28,11 @@
     <Filter Include="Source Files\engine\render">
       <UniqueIdentifier>{9b11a33c-3249-498d-806d-af1fa626de31}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\engine\render\opengl">
-      <UniqueIdentifier>{59d2a705-cd08-4a4a-b0b2-373b667f5f16}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\engine">
       <UniqueIdentifier>{3c90c765-696d-48f9-9ef4-0c0aed189aaa}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files\engine\render">
       <UniqueIdentifier>{e6c832b0-65b5-4b83-aa76-de166d54279a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\engine\render\opengl">
-      <UniqueIdentifier>{82c76458-3869-424f-93f4-563e9b574178}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -48,11 +42,14 @@
     <ClCompile Include="src\wxfrontend\Main.cpp">
       <Filter>Source Files\wxfrontend</Filter>
     </ClCompile>
-    <ClCompile Include="src\engine\render\opengl\EngineCanvas.cpp">
-      <Filter>Source Files\engine\render\opengl</Filter>
+    <ClCompile Include="src\engine\render\EngineCanvas.cpp">
+      <Filter>Source Files\engine\render</Filter>
     </ClCompile>
-    <ClCompile Include="src\engine\render\opengl\EngineModel.cpp">
-      <Filter>Source Files\engine\render\opengl</Filter>
+    <ClCompile Include="src\engine\EngineModel.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\engine\EngineScene.cpp">
+      <Filter>Source Files\engine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -62,11 +59,14 @@
     <ClInclude Include="src\wxfrontend\Main.h">
       <Filter>Header Files\wxfrontend</Filter>
     </ClInclude>
-    <ClInclude Include="src\engine\render\opengl\EngineCanvas.h">
-      <Filter>Header Files\engine\render\opengl</Filter>
+    <ClInclude Include="src\engine\render\EngineCanvas.h">
+      <Filter>Header Files\engine\render</Filter>
     </ClInclude>
-    <ClInclude Include="src\engine\render\opengl\EngineModel.h">
-      <Filter>Header Files\engine\render\opengl</Filter>
+    <ClInclude Include="src\engine\EngineModel.h">
+      <Filter>Header Files\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\engine\EngineScene.h">
+      <Filter>Header Files\engine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
