--- a/gameengine.vcxproj.filters
+++ b/gameengine.vcxproj.filters
@@ -45,10 +45,13 @@
     <ClCompile Include="src\engine\render\EngineCanvas.cpp">
       <Filter>Source Files\engine\render</Filter>
     </ClCompile>
-    <ClCompile Include="src\engine\EngineModel.cpp">
+    <ClCompile Include="src\engine\Scene.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
-    <ClCompile Include="src\engine\EngineScene.cpp">
+    <ClCompile Include="src\engine\Camera.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\engine\Model.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
   </ItemGroup>
@@ -62,10 +65,13 @@
     <ClInclude Include="src\engine\render\EngineCanvas.h">
       <Filter>Header Files\engine\render</Filter>
     </ClInclude>
-    <ClInclude Include="src\engine\EngineModel.h">
+    <ClInclude Include="src\engine\Camera.h">
       <Filter>Header Files\engine</Filter>
     </ClInclude>
-    <ClInclude Include="src\engine\EngineScene.h">
+    <ClInclude Include="src\engine\Model.h">
+      <Filter>Header Files\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\engine\Scene.h">
       <Filter>Header Files\engine</Filter>
     </ClInclude>
   </ItemGroup>
