--- a/gameengine.vcxproj
+++ b/gameengine.vcxproj
@@ -157,6 +157,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="resources\models\cube.stl" />
+    <None Include="resources\shaders\simple.vert" />
     <None Include="resources\simplescene.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
