--- a/gameengine.vcxproj.filters
+++ b/gameengine.vcxproj.filters
@@ -96,5 +96,8 @@
     <None Include="resources\models\cube.stl">
       <Filter>Resource Files\models</Filter>
     </None>
+    <None Include="resources\shaders\simple.vert">
+      <Filter>Resource Files\shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
