--- a/gameengine.vcxproj.filters
+++ b/gameengine.vcxproj.filters
@@ -102,5 +102,6 @@
     <None Include="resources\models\cube.ply">
       <Filter>Resource Files\models</Filter>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
