Added glew to project

--- a/demo-cube/packages.config
+++ b/demo-cube/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="glew" version="1.9.0.1" targetFramework="native" />
+  <package id="glew.redist" version="1.9.0.1" targetFramework="native" />
   <package id="nlohmann.json" version="3.7.3" targetFramework="native" />
   <package id="wxWidgetsTemplate" version="2.5.3" targetFramework="native" />
 </packages>
