--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -162,7 +162,7 @@
     <ClInclude Include="src\Engine.h" />
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\render\EngineCanvas.h" />
-    <ClInclude Include="src\render\Shader.h" />
+    <ClInclude Include="src\render\ShaderProgram.h" />
     <ClInclude Include="src\Scene.h" />
   </ItemGroup>
   <ItemGroup>
@@ -170,7 +170,7 @@
     <ClCompile Include="src\Engine.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\render\EngineCanvas.cpp" />
-    <ClCompile Include="src\render\Shader.cpp" />
+    <ClCompile Include="src\render\ShaderProgram.cpp" />
     <ClCompile Include="src\Scene.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
