--- a/gameengine/packages.config
+++ b/gameengine/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="glew" version="1.9.0.1" targetFramework="native" />
   <package id="glew.redist" version="1.9.0.1" targetFramework="native" />
+  <package id="glm" version="0.9.9.700" targetFramework="native" />
   <package id="nlohmann.json" version="3.7.3" targetFramework="native" />
   <package id="nupengl.core" version="0.1.0.1" targetFramework="native" />
   <package id="nupengl.core.redist" version="0.1.0.1" targetFramework="native" />
