--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="src\render\ShaderProgram.h">
       <Filter>Header Files\render</Filter>
     </ClInclude>
+    <ClInclude Include="src\GLComponents.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\render\EngineCanvas.cpp">
