--- a/gameengine-GTest/gameengine-GTest.vcxproj.filters
+++ b/gameengine-GTest/gameengine-GTest.vcxproj.filters
@@ -8,6 +8,9 @@
     <ClCompile Include="src\ModelTests.cpp">
       <Filter>tests</Filter>
     </ClCompile>
+    <ClCompile Include="src\EntityTests.cpp">
+      <Filter>tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
