--- a/demo-cube/demo-cube.vcxproj.filters
+++ b/demo-cube/demo-cube.vcxproj.filters
@@ -43,6 +43,9 @@
     <None Include="resources\models\suzanne.ply">
       <Filter>Resource Files\models</Filter>
     </None>
+    <None Include="resources\models\teapot.ply">
+      <Filter>Resource Files\models</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\App.h">
