--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="src\Engine.h" />
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\GLComponents.h" />
+    <ClInclude Include="src\loaders\models\PlyLoader.h" />
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\render\EngineCanvas.h" />
     <ClInclude Include="src\render\ShaderProgram.h" />
@@ -172,6 +173,7 @@
     <ClCompile Include="src\Engine.cpp" />
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\GLComponents.cpp" />
+    <ClCompile Include="src\loaders\models\PlyLoader.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\render\EngineCanvas.cpp" />
     <ClCompile Include="src\render\ShaderProgram.cpp" />
